--- a/scripts/ocumet_01_cleaning.ipynb
+++ b/scripts/ocumet_01_cleaning.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "from dataframe_utils import data_get, vars_filter, vars_merge, vars_fill_nan\n",
     "from workspace import workspace, paths_get, paths_join"
    ]
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -191,25 +192,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "independent_vars = 'group'\n",
     "identification_vars = ['id', 'months', 'visit_no']\n",
     "dependent_vars = [d_var for d_var in data.columns for this_str in ['mean', 'oct', 'fpf', 'vf', 'hvf'] if d_var.startswith(this_str)]\n",
-    "data_variables = [independent_vars] + identification_vars + dependent_vars\n",
     "\n",
-    "# neaten up the dependent var column names for str.split later\n",
+    "# Neaten up the dependent var column names for str.split later\n",
     "new_dependent_vars = [var.replace('cq_mac_', 'cq_').replace('gcc_mac_', 'gcc_') for var in dependent_vars]\n",
-    "data = data.rename( columns=dict(zip(dependent_vars,new_dependent_vars)) )\n",
-    "\n",
-    "dependent_vars = new_dependent_vars"
+    "data = data.rename( columns=dict(zip(dependent_vars,new_dependent_vars)) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -227,8 +225,9 @@
     "for x in ['NAION', 'ODD']:\n",
     "    this_group = [y for y in data['group'].unique().tolist() if x in y]\n",
     "    group_data = data[data['group'].isin(this_group+['Control'])]\n",
-    "    group_data = vars_fill_nan(group_data, d_vars=dependent_vars, i_vars=independent_vars)\n",
-    "\n",
+    "    group_data = vars_fill_nan(group_data, d_vars=new_dependent_vars, i_vars=independent_vars)\n",
+    "    group_data['group_binary'] = np.where(group_data['group']=='Control', 'Control', x)\n",
+    "    data_variables = [independent_vars] + identification_vars + new_dependent_vars + ['group_binary']\n",
     "    group_data[data_variables].to_csv(paths_join(d,'1209-%s.csv' % x.lower()), index=False)\n",
     "    print(\"%s data saved out as '1209-%s.csv'\" % (x, x.lower()))"
    ]
@@ -250,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (main, Oct 21 2022, 22:22:30) [Clang 14.0.0 (clang-1400.0.29.202)]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
