--- a/scripts/01-ocumet-cleaning.ipynb
+++ b/scripts/01-ocumet-cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
      "text": [
       "paths order: b.d.o.t.s\n",
       "you're in /Users/miaomiaoyu/workspace/ocumet\n",
-      "Raw dataframe size: (192, 86)\n"
+      "Raw dataframe size: (192, 87)\n"
      ]
     },
     {
@@ -71,10 +71,10 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>5.0</td>\n",
-       "      <td>5/6/22 0:00</td>\n",
+       "      <td>2022-05-06</td>\n",
        "      <td>9</td>\n",
-       "      <td>3/1/20</td>\n",
-       "      <td>5/6/22 0:00</td>\n",
+       "      <td>2020-03-01</td>\n",
+       "      <td>2022-05-06</td>\n",
        "      <td>26.0</td>\n",
        "      <td>NAION</td>\n",
        "      <td>OD</td>\n",
@@ -84,10 +84,10 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>5.0</td>\n",
-       "      <td>5/6/22 0:00</td>\n",
+       "      <td>2022-05-06</td>\n",
        "      <td>9</td>\n",
-       "      <td>3/25/22</td>\n",
-       "      <td>5/6/22 0:00</td>\n",
+       "      <td>2022-03-25</td>\n",
+       "      <td>2022-05-06</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NAION</td>\n",
        "      <td>OS</td>\n",
@@ -97,10 +97,10 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>6/9/21 0:00</td>\n",
+       "      <td>2021-06-09</td>\n",
        "      <td>40</td>\n",
-       "      <td>1/9/20</td>\n",
-       "      <td>6/9/21 0:00</td>\n",
+       "      <td>2020-01-09</td>\n",
+       "      <td>2021-06-09</td>\n",
        "      <td>17.0</td>\n",
        "      <td>NAION</td>\n",
        "      <td>OS</td>\n",
@@ -110,10 +110,10 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>10/6/21 0:00</td>\n",
+       "      <td>2021-10-06</td>\n",
        "      <td>102</td>\n",
-       "      <td>9/18/20</td>\n",
-       "      <td>10/6/21 0:00</td>\n",
+       "      <td>2020-09-18</td>\n",
+       "      <td>2021-10-06</td>\n",
        "      <td>12.0</td>\n",
        "      <td>NAION</td>\n",
        "      <td>OD</td>\n",
@@ -123,10 +123,10 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>5/13/22 0:00</td>\n",
+       "      <td>2022-05-13</td>\n",
        "      <td>137</td>\n",
-       "      <td>4/8/16</td>\n",
-       "      <td>5/13/22 0:00</td>\n",
+       "      <td>2016-04-08</td>\n",
+       "      <td>2022-05-13</td>\n",
        "      <td>73.0</td>\n",
        "      <td>NAION</td>\n",
        "      <td>OD</td>\n",
@@ -138,19 +138,19 @@
        "</div>"
       ],
       "text/plain": [
-       "   visit_no          date  subject_id time_since_onset/diagnosis_(months)  \\\n",
-       "0       5.0   5/6/22 0:00           9                              3/1/20   \n",
-       "1       5.0   5/6/22 0:00           9                             3/25/22   \n",
-       "2       1.0   6/9/21 0:00          40                              1/9/20   \n",
-       "3       1.0  10/6/21 0:00         102                             9/18/20   \n",
-       "4       1.0  5/13/22 0:00         137                              4/8/16   \n",
+       "   visit_no       date  subject_id time_since_onset/diagnosis_(months)  \\\n",
+       "0       5.0 2022-05-06           9                          2020-03-01   \n",
+       "1       5.0 2022-05-06           9                          2022-03-25   \n",
+       "2       1.0 2021-06-09          40                          2020-01-09   \n",
+       "3       1.0 2021-10-06         102                          2020-09-18   \n",
+       "4       1.0 2022-05-13         137                          2016-04-08   \n",
        "\n",
        "  date_of_image  months diagnosis eye odd-aion_ bilateral  \n",
-       "0   5/6/22 0:00    26.0     NAION  OD       NaN         Y  \n",
-       "1   5/6/22 0:00     1.0     NAION  OS       NaN         Y  \n",
-       "2   6/9/21 0:00    17.0     NAION  OS       NaN         N  \n",
-       "3  10/6/21 0:00    12.0     NAION  OD       NaN         Y  \n",
-       "4  5/13/22 0:00    73.0     NAION  OD       NaN         Y  "
+       "0    2022-05-06    26.0     NAION  OD       NaN         Y  \n",
+       "1    2022-05-06     1.0     NAION  OS       NaN         Y  \n",
+       "2    2021-06-09    17.0     NAION  OS       NaN         N  \n",
+       "3    2021-10-06    12.0     NAION  OD       NaN         Y  \n",
+       "4    2022-05-13    73.0     NAION  OD       NaN         Y  "
       ]
      },
      "metadata": {},
@@ -160,20 +160,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Clean dataframe size: (183, 65)\n",
-      "Control, NAION, NAION bilateral, NAION unilateral, Not control, ODD, ODD-NAION\n"
+      "Clean dataframe size: (183, 66)\n",
+      "Control, NAION Bilateral, NAION Unilateral, Not control, ODD, ODD-NAION\n"
      ]
     }
    ],
    "source": [
     "workspace('ocumet')\n",
-    "data = data_get('1209-raw.csv', lowercase=True)\n",
+    "data = data_get('1209-raw-mmy.xlsx', lowercase=True)\n",
     "\n",
     "print('Raw dataframe size: (%s, %s)' % data.shape)\n",
     "\n",
     "data = data.dropna(subset=['subject_id'], axis='rows')\n",
     "data = vars_filter(data, ['rimprof'])\n",
-    "data['bilateral_str'] = data['bilateral'].map({'Y':'bilateral','N':'unilateral'})\n",
+    "data['bilateral_str'] = data['bilateral'].map({'Y':'Bilateral','N':'Unilateral'})\n",
     "data['bilateral_str'] = data['bilateral_str'].fillna('')\n",
     "data['subject_id'] = data['subject_id'].astype(int)\n",
     "data = vars_merge(data, {'id':['subject_id', 'eye'], 'group':['diagnosis', 'bilateral_str']})\n",
@@ -192,7 +192,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create new columns for whole eye FPF values\n",
+    "data['fpf_disc'] = data[['fpf_rnfl_t', 'fpf_rnfl_s', 'fpf_rnfl_n', 'fpf_rnfl_i']].mean(axis=1)  # best way to get 'whole disc fpf'README.md\n",
+    "data['fpf_mac'] = data[['mac_ret']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -225,9 +236,11 @@
     "for x in ['NAION', 'ODD']:\n",
     "    this_group = [y for y in data['group'].unique().tolist() if x in y]\n",
     "    group_data = data[data['group'].isin(this_group+['Control'])]\n",
+    "    if x == 'NAION': \n",
+    "        group_data = group_data[group_data['group']!='ODD-NAION']\n",
     "    group_data = vars_fill_nan(group_data, d_vars=new_dependent_vars, i_vars=independent_vars)\n",
     "    group_data['group_binary'] = np.where(group_data['group']=='Control', 'Control', x)\n",
-    "    data_variables = [independent_vars] + identification_vars + new_dependent_vars + ['group_binary']\n",
+    "    data_variables = [independent_vars] + identification_vars + new_dependent_vars + ['group_binary', 'good']\n",
     "    group_data[data_variables].to_csv(paths_join(d,'1209-%s.csv' % x.lower()), index=False)\n",
     "    print(\"%s data saved out as '1209-%s.csv'\" % (x, x.lower()))"
    ]
